styles.css
/* Imports */
@import url("https://fonts.googleapis.com/css2?family=Playfair+Display&family=Source+Sans+Pro&display=swap");

/* General Styles */
html {
  background: white;
}

body {
  margin: 0;
  padding: 0;
}

.wrapper {
  max-width: 1200px;
  width: 90%;
  margin: 0 auto;
}

/* Typography */
h1,
h2 {
  font-family: "Playfair Display", serif;
}

p,
a {
  font-family: "Source Sans Pro", sans-serif;
}

/* Nav */
.main-nav {
  display: flex;
  justify-content: space-between;
  align-items: center;
  width: 90%;
}

.main-nav ul {
  width: 60%;
  display: flex;
  justify-content: space-between;
}

.main-nav a {
  text-decoration: none;
  font-size: 1.5rem;
  border: 2px solid rgba(0, 114, 225, 0.8);
  background-color: rgba(0, 114, 225, 1);
  padding: 5px;
  color: white;
}

.main-nav a:hover {
  background-color: rgba(0, 114, 225, 0.6);
  color: black;
}

.main-nav li {
  list-style: none;
}

.main-nav img {
  width: 200px;
}

/* welcome section */
.welcome {
  margin: 5em 0;
}
.welcome h1 {
  font-size: 4rem;
  text-align: center;
}

.welcome p {
  font-size: 1.5rem;
}

.welcome img {
  display: block;
  max-width: 1000px;
  width: 80%;
  margin: 20px auto;
}
/* footer */
.footer {
  background-color: rgba(0, 114, 225, 1);
  width: 100%;
  color: white;
  padding: 20px 0;
}

footer div {
  display: flex;
  justify-content: space-between;
}

.footer p {
  font-size: 1.5rem;
}

/* responsive */

@media only screen and (max-width: 1200px) {
  footer div {
    flex-direction: column;
  }
}

@media only screen and (max-width: 650px) {
  .main-nav img {
    width: 150px;
    margin-right: -50px;
  }

  .main-nav {
    display: flex;
    justify-content: space-between;
    align-items: center;
    width: 95%;
  }

  .main-nav a {
    font-size: 1.5rem;
    margin-right: 10px;
  }
}

@media only screen and (max-width: 600px) {
  .welcome p {
    font-size: 1rem;
  }
}

@media only screen and (max-width: 575px) {
  .welcome h1 {
    font-size: 3rem;
  }
  .welcome p {
    font-size: 1rem;
  }
}

